fixed contact buttons on mobile displays

--- a/src/components/Pages.css
+++ b/src/components/Pages.css
@@ -56,32 +56,7 @@
     }
 }
 
-@media (max-width: 1200px) { 
 
-    .contact-button{
-    width: 20vw;
-    height: 25vw;
-    vertical-align: top;
-    margin: 10px;
-    border-radius: 20px;
-    transition: all 0.2s ease-in-out;
-    background-position: center;
-    background-size: contain;
-    font-family: Victormono-Bold;
-    font-size: 0.8em;
-    border: none;
-
-}
-
-    .contact-button h3 {
-        text-align: center;
-        margin: 0px;
-        padding: 0px;
-        color: black;
-        font-family: Neutro-Extrabold;
-        font-size: 1.5em;
-    }
-}
 
 .contact-divider{
     margin-inline: 20px;
@@ -109,4 +84,35 @@
     font-family: Victormono-Bold;
     padding: 20px;
     font-size: 1em;
+}
+
+@media (max-width: 1200px) { 
+
+    .contact-button{
+    width: 70vw;
+    height: 25vw;
+    vertical-align: top;
+    margin: 10px;
+    border-radius: 20px;
+    transition: all 0.2s ease-in-out;
+    background-position: center;
+    background-size: contain;
+    font-family: Victormono-Bold;
+    font-size: 0.8em;
+    border: none;
+
+}
+
+    .contact-button h3 {
+        text-align: center;
+        margin: 0px;
+        padding: 0px;
+        color: black;
+        font-family: Neutro-Extrabold;
+        font-size: 1.5em;
+    }
+
+    .contact-button-decoration {
+        display: none;
+    }
 }
